Fix java:S4738 code smell